<resources>
    <string name="app_name">Portfolio Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="go_to_certification">Add Certification</string>
    <string name="go_to_project">Add Project</string>

    <string name="certification_title">Title</string>
    <string name="certification_company">Company</string>
    <string name="certification_id">Credential ID</string>
    <string name="certification_url">Url</string>
    <string name="certification_submit">Add Certification</string>

    <string name="required_field">Required Field</string>
    <string name="certification_check">Already in Database</string>

    <string name="project_name">Name</string>
    <string name="project_description">Description</string>
    <string name="project_language">Language</string>
    <string name="project_github">Github</string>
    <string name="project_submitButton">Add Project</string>

    <string name="portfolio_updated">Portfolio Updated</string>

</resources>
