<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/project_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/project_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/project_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/project_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/project_language"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/project_language">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/project_github"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/project_github">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/project_firstImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_android" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/project_secondImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_android" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/project_thirdImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_android" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/project_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_submitButton" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>